crates/mys-display/src/v2/snapshots/mys_display__v2__parser__tests__enum_missing_index.snap
---
source: crates/mys-display/src/v2/parser.rs
expression: "strands(r#\"{0x1::option::Option<u64>::Some(42u64)}\"#)"
---
Error: Unexpected '(' at byte offset 31, expected '#'
