crates/mys-display/src/v2/snapshots/mys_display__v2__parser__tests__expr_with_transform.snap
---
source: crates/mys-display/src/v2/parser.rs
expression: "strands(r#\"{foo.bar.baz:str}\"#)"
---
{ foo.bar.baz
: str}@0
